src/main/java/com/example/deleg/fail/MessageRepository.java
package com.example.deleg.fail;

import org.springframework.data.jpa.repository.JpaRepository;

public interface MessageRepository extends JpaRepository<Message, Integer> {

}
